--- a/style/form.scss
+++ b/style/form.scss
@@ -174,3 +174,214 @@ body {
   color: #222;
   background-color: #f6f0e8;
 }
+
+.btn-close {
+  width: 4em;
+  height: 4em;
+  border-radius: 5px;
+  border: 1px solid #bbc0c3;
+  background-color: #f6f0e8;
+  color: #111111;
+  position: absolute;
+  top: 54px;
+  right: 54px;
+}
+
+.content {
+  background-color: #f6f0e8;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  &__svg {
+    width: 24%;
+    height: 19%;
+    background-image: url("../images/form/florals.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    top: 0;
+    right: 10%;
+
+  }
+
+  &__svg-1 {
+    width: 10%;
+    height: 16%;
+    background-image: url("../images/form/svg-1.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    top: 10%;
+    left: 10%;
+  }
+
+  &__svg-2 {
+    width: 19%;
+    height: 31%;
+    background-image: url("../images/form/svg-2.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
+
+  &__svg-3 {
+    width: 6%;
+    height: 40%;
+    background-image: url("../images/form/svg-3.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    bottom: 17%;
+    right: 0%;
+  }
+}
+
+.rise {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+
+  &__title {
+    margin-top: 220px;
+    color: #222222;
+    font-family: "DMSerifText";
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 70px;
+    letter-spacing: 0.4px;
+  }
+}
+
+.form {
+  max-width: 450px;
+  width: 450px;
+  padding: 0;
+  background-color: #f6f0e8;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &__input {
+    width: 100%;
+    height: 60px;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    background-color: #ffffff;
+    color: #fff;
+    font-family: Manrope;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 30px;
+    text-align: left;
+    letter-spacing: 0.4px;
+    outline: none;
+  }
+
+  &__select {
+    border-radius: 5px;
+    border-color: #fff;
+    position: relative;
+    background-color: #ffffff;
+    background-image: url("../assets/images/rise/select.png");
+    background-repeat: no-repeat;
+    background-position-x: 93%;
+    background-position-y: 50%;
+    padding: 6px 12px;
+    width: 100%;
+    height: 60px;
+    color: #666666;
+    font-family: Manrope;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 30px;
+    text-align: right;
+    outline: none;
+    appearance: none;
+    -webkit-appearance: none;
+  }
+
+
+  &__btn {
+    width: 270px;
+    height: 60px;
+    border-radius: 5px;
+    border: 1px solid #bbc0c3;
+    background-color: #f6f0e8;
+    font-family: "ManropeSB";
+    color: #222;
+    line-height: 30px;
+  }
+}
+
+.footer {
+  color: #222;
+  font-family: Manrope;
+  padding: 0 90px 36px;
+  z-index: 1;
+
+  @media (max-width: 1199.98px) {
+    margin-top: 15px;
+    padding: 0 25px;
+  }
+
+  &__copy {
+    font-size: 13px;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: normal;
+    text-align: center;
+    font-style: normal;
+    letter-spacing: 0.33px;
+    line-height: normal;
+
+    @media (max-width: 1199.98px) {
+      font-size: 8px;
+      text-align: center;
+      letter-spacing: 0.2px;
+    }
+  }
+
+  &__privacy {
+    font-family: Manrope-SB;
+    font-size: 14px;
+    font-weight: 500;
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: 30px;
+    text-align: right;
+    font-style: normal;
+    letter-spacing: 0.35px;
+    line-height: normal;
+
+    @media (max-width: 1199.98px) {
+      font-size: 8px;
+      text-align: center;
+      letter-spacing: 0.2px;
+    }
+  }
+}
+
+.icon__modern {
+  margin-right: 40px;
+
+  @media (max-width: 1199.98px) {
+    width: 48px;
+    height: 24px;
+    margin-right: 10px;
+    vertical-align: top;
+  }
+}
+
+.icon__home {
+  @media (max-width: 1199.98px) {
+    width: 20px;
+    height: 19px;
+    vertical-align: revert;
+  }
+}
