--- a/style/form.scss
+++ b/style/form.scss
@@ -288,10 +288,11 @@ body {
     border-color: #fff;
     position: relative;
     background-color: #ffffff;
-    background-image: url("../assets/images/rise/select.png");
+    background-image: url("../images/form/select.png");
     background-repeat: no-repeat;
     background-position-x: 93%;
     background-position-y: 50%;
+    background-size: auto;
     padding: 6px 12px;
     width: 100%;
     height: 60px;
