подключил barba, gzap, пофиксил стили

--- a/style/style.scss
+++ b/style/style.scss
@@ -204,6 +204,7 @@ body {
 
     @media (max-width: 991.98px) {
       margin-top: 30px;
+      align-items: center;
     }
   }
 
@@ -517,15 +518,14 @@ body {
 }
 
 
-.btn-close {
+.btn-close-white {
   position: absolute;
   top: 30px;
   right: 30px;
   width: 60px;
   height: 60px;
   border-radius: 5px;
-  border: 1px solid #fff;
-  color: #fff;
+  border: 2px solid;
 
   @media (max-width: 1199.98px) {
     right: calc(50% - 30px)
