--- a/style/form.scss
+++ b/style/form.scss
@@ -185,6 +185,13 @@ body {
   position: absolute;
   top: 54px;
   right: 54px;
+
+  @media (max-width: 1199.98px) {
+    top: 20px;
+    width: 50px;
+    height: 50px;
+    right: calc(50% - 25px)
+  }
 }
 
 .content {
@@ -248,13 +255,23 @@ body {
 
 
   &__title {
-    margin-top: 220px;
+    margin-top: 170px;
     color: #222222;
     font-family: "DMSerifText";
     font-size: 40px;
     font-weight: 400;
     line-height: 70px;
     letter-spacing: 0.4px;
+
+    @media (max-width: 991.98px) {
+      margin-top: 137px;
+      font-size: 26px;
+      line-height: 26px;
+      text-align: center;
+      font-style: normal;
+      letter-spacing: 0.26px;
+
+    }
   }
 }
 
@@ -266,6 +283,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @media (max-width: 991.98px) {
+    width: 325px;
+  }
 
   &__input {
     width: 100%;
@@ -281,6 +302,11 @@ body {
     text-align: left;
     letter-spacing: 0.4px;
     outline: none;
+
+    @media (max-width: 991.98px) {
+      height: 50px;
+      font-size: 14px;
+    }
   }
 
   &__select {
@@ -305,6 +331,11 @@ body {
     outline: none;
     appearance: none;
     -webkit-appearance: none;
+
+    @media (max-width: 991.98px) {
+      height: 50px;
+      font-size: 14px;
+    }
   }
 
 
@@ -317,6 +348,11 @@ body {
     font-family: "ManropeSB";
     color: #222;
     line-height: 30px;
+
+    @media (max-width: 991.98px) {
+      width: 200px;
+      height: 42px;
+    }
   }
 }
 
