--- a/style/style.scss
+++ b/style/style.scss
@@ -349,6 +349,18 @@ body {
     position: absolute;
     bottom: 0;
     left: 0;
+    //animation: florals 12s linear infinite;
+
+
+    @keyframes florals {
+      0% {
+        transform: rotateZ(0deg) translate3d(0, 4%, 0) rotateZ(0deg)
+      }
+
+      100% {
+        transform: rotateZ(-360deg) translate3d(0, 4%, 0) rotateZ(360deg);
+      }
+    }
 
     @media (max-width: 991.98px) {
       width: 125px;
@@ -397,6 +409,17 @@ body {
     position: absolute;
     bottom: 2%;
     right: 9%;
+    animation: img2 7s linear infinite;
+
+    @keyframes img2 {
+      0% {
+        transform: rotateZ(0deg) translate3d(0, 4%, 0) rotateZ(0deg)
+      }
+
+      100% {
+        transform: rotateZ(360deg) translate3d(0, 4%, 0) rotateZ(-360deg)
+      }
+    }
 
     @media (max-width: 991.98px) {
       width: 34%;
@@ -432,6 +455,17 @@ body {
     position: absolute;
     top: 1.5%;
     left: 18%;
+    animation: img3 7s linear infinite;
+
+    @keyframes img3 {
+      0% {
+        transform: rotateZ(0deg) translate3d(0, 12%, 0) rotateZ(0deg)
+      }
+
+      100% {
+        transform: rotateZ(-360deg) translate3d(0, 12%, 0) rotateZ(360deg)
+      }
+    }
 
     @media (max-width: 991.98px) {
       width: 58px;
